# pyquadim

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: rename_platform.py
.github/workflows/: ci.yml  python-publish.yml
pyquadim/: __init__.py
